--- a/src/main/frontend/src/index.html
+++ b/src/main/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Test</title>
+  <title>Welcome !!</title>
   <base href=".">
 
   <!-- Load jQuery and Bootstrap -->
